# wagtailsnippetscopy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
wagtailsnippetscopy/: admin.py  apps.py  forms.py  models.py  registry.py  views.py  wagtail_hooks.py
wagtailsnippetscopy/templates/wagtailsnippetscopy/: copy.html
